# automate_splitwise_expenses

./: .env_template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/main/: app.py  clean_csv.py  upload_expenses.py
src/scripts/: run_clean_csv.py  run_upload_expenses.py
tests/: test_clean_csv.py  test_hello.py  test_upload_expenses.py
tests/data/clean/: test_data_raw_clean.csv
tests/data/raw/: test_data.csv  test_data_raw.csv
