[tool.poetry]
name = "automate_splitwise_expenses"
version = "0.1.0"
description = "Automate uploading expenses on Splitwise."
authors = ["Arthur Dent <arthur@dent.space>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_minimal_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.9"
splitwise = "^2.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
